// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should refresh items properly 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -75,14 +75,14 @@
      onScrollBeginDrag={[Function anonymous]}
      onScrollEndDrag={[Function anonymous]}
      refreshControl={
        <RefreshControlMock
          onRefresh={[Function handleRefreshing]}
-         refreshing={false}
+         refreshing={true}
        />
      }
-     refreshing={false}
+     refreshing={true}
      renderItem={[Function anonymous]}
      scrollEventThrottle={0.0001}
      stickyHeaderIndices={
        Array [
          1,"
`;

exports[`should render correctly for basic member 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ECEEF2",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    ListEmptyComponent={[Function]}
    ListHeaderComponent={[Function]}
    contentContainerStyle={
      Array [
        undefined,
        Object {
          "backgroundColor": "#ECEEF2",
        },
        Object {},
      ]
    }
    contentInset={
      Object {
        "bottom": 10,
      }
    }
    data={
      Array [
        Object {
          "data": Array [
            Object {
              "accepted_count": 5,
              "completed_count": 3,
              "creator_id": "person1",
              "end_date": "2018-10-06T14:13:21Z",
              "id": "1",
              "isPast": false,
              "organization_id": "123",
              "title": "Read \\"There and Back Again\\"",
            },
          ],
          "title": "",
        },
        Object {
          "data": Array [
            Object {
              "accepted_count": 5,
              "completed_count": 3,
              "creator_id": "person1",
              "end_date": "2018-07-06T14:13:21Z",
              "id": "2",
              "isPast": true,
              "organization_id": "123",
              "title": "Past Challenge",
            },
          ],
          "title": "Past Challenges",
        },
      ]
    }
    disableVirtualization={false}
    extraData={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={0.2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    refreshing={false}
    renderItem={[Function]}
    scrollEventThrottle={0.0001}
    stickyHeaderIndices={
      Array [
        1,
        4,
      ]
    }
    testID="ChallengeFeed"
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
      />
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "backgroundColor": "#ECEEF2",
              "marginVertical": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#B4B6BA",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "lineHeight": 16,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderRadius": 8,
                "elevation": 4,
                "flexDirection": "row",
                "marginHorizontal": 16,
                "marginVertical": 8,
                "shadowColor": "#000000",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 0.3,
                "shadowRadius": 2,
              },
              Object {
                "alignItems": "stretch",
                "flexDirection": "column",
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="ChallengeItemSelectButton"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "borderWidth": 0,
                    "height": 60,
                    "justifyContent": "center",
                    "margin": 0,
                    "paddingHorizontal": 20,
                    "paddingVertical": 10,
                  },
                  null,
                  Object {
                    "flex": 1,
                  },
                  null,
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "padding": 20,
                    },
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {},
                      Object {
                        "flex": 5,
                        "flexDirection": "column",
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#005A7F",
                        "fontFamily": "SourceSansPro-Regular",
                        "fontSize": 16,
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                        "lineHeight": 24,
                        "marginBottom": 3,
                        "textAlignVertical": "center",
                        "textTransform": "none",
                      }
                    }
                  >
                    Read "There and Back Again"
                  </Text>
                  <View
                    style={
                      Array [
                        Object {
                          "paddingTop": 8,
                        },
                        Object {
                          "flexDirection": "row",
                          "justifyContent": "space-between",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {},
                          Object {
                            "flex": 1,
                            "flexDirection": "column",
                            "justifyContent": "flex-start",
                          },
                        ]
                      }
                    >
                      <Text
                        style={
                          Object {
                            "color": "#B4B6BA",
                            "fontFamily": "SourceSansPro-Regular",
                            "fontSize": 12,
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                            "lineHeight": 16,
                            "textAlignVertical": "center",
                            "textTransform": "none",
                          }
                        }
                      >
                        Days Left
                      </Text>
                      <Text
                        style={
                          Object {
                            "color": "#505256",
                            "fontFamily": "SourceSansPro-ExtraLight",
                            "fontSize": 24,
                            "fontStyle": "normal",
                            "fontWeight": "300",
                            "lineHeight": 30,
                            "textAlignVertical": "center",
                            "textTransform": "none",
                          }
                        }
                      >
                        35
                      </Text>
                    </View>
                    <View
                      style={
                        Array [
                          Object {},
                          Object {
                            "flex": 1,
                            "flexDirection": "column",
                            "justifyContent": "flex-start",
                          },
                        ]
                      }
                    >
                      <Text
                        style={
                          Object {
                            "color": "#B4B6BA",
                            "fontFamily": "SourceSansPro-Regular",
                            "fontSize": 12,
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                            "lineHeight": 16,
                            "textAlignVertical": "center",
                            "textTransform": "none",
                          }
                        }
                      >
                        Joined
                      </Text>
                      <Text
                        onPress={[Function]}
                        style={
                          Array [
                            Object {
                              "color": "#505256",
                              "fontFamily": "SourceSansPro-ExtraLight",
                              "fontSize": 24,
                              "fontStyle": "normal",
                              "fontWeight": "300",
                              "lineHeight": 30,
                              "textAlignVertical": "center",
                              "textTransform": "none",
                            },
                            null,
                          ]
                        }
                        testID="joinedCount"
                      >
                        5
                      </Text>
                    </View>
                    <View
                      style={
                        Array [
                          Object {},
                          Object {
                            "flex": 1,
                            "flexDirection": "column",
                            "justifyContent": "flex-start",
                          },
                        ]
                      }
                    >
                      <Text
                        style={
                          Object {
                            "color": "#B4B6BA",
                            "fontFamily": "SourceSansPro-Regular",
                            "fontSize": 12,
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                            "lineHeight": 16,
                            "textAlignVertical": "center",
                            "textTransform": "none",
                          }
                        }
                      >
                        Completed
                      </Text>
                      <Text
                        onPress={[Function]}
                        style={
                          Array [
                            Object {
                              "color": "#505256",
                              "fontFamily": "SourceSansPro-ExtraLight",
                              "fontSize": 24,
                              "fontStyle": "normal",
                              "fontWeight": "300",
                              "lineHeight": 30,
                              "textAlignVertical": "center",
                              "textTransform": "none",
                            },
                            null,
                          ]
                        }
                        testID="completedCount"
                      >
                        3
                      </Text>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {},
                      Object {
                        "alignItems": "flex-end",
                        "flex": 1,
                        "justifyContent": "center",
                      },
                    ]
                  }
                />
              </View>
            </View>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="ChallengeItemActionButton"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "borderWidth": 0,
                    "height": 60,
                    "justifyContent": "center",
                    "margin": 0,
                    "paddingHorizontal": 20,
                    "paddingVertical": 10,
                  },
                  null,
                  Object {
                    "backgroundColor": "#3CC8E6",
                    "borderBottomLeftRadius": 8,
                    "borderBottomRightRadius": 8,
                    "height": undefined,
                    "paddingVertical": 8,
                  },
                  null,
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#ffffff",
                      "fontFamily": "SourceSansPro-Regular",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "letterSpacing": 1,
                      "lineHeight": 18,
                      "textAlign": "center",
                      "textAlignVertical": "center",
                      "textTransform": "uppercase",
                    },
                    Object {
                      "color": "#ffffff",
                      "fontFamily": "SourceSansPro-Regular",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "bold",
                      "letterSpacing": 1,
                      "lineHeight": 18,
                      "textAlignVertical": "center",
                      "textTransform": "uppercase",
                    },
                  ]
                }
              >
                JOIN
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      />
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "backgroundColor": "#ECEEF2",
              "marginVertical": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#B4B6BA",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "lineHeight": 16,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Past Challenges
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderRadius": 8,
                "elevation": 4,
                "flexDirection": "row",
                "marginHorizontal": 16,
                "marginVertical": 8,
                "shadowColor": "#000000",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 0.3,
                "shadowRadius": 2,
              },
              Object {
                "alignItems": "stretch",
                "flexDirection": "column",
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="ChallengeItemSelectButton"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "borderWidth": 0,
                    "height": 60,
                    "justifyContent": "center",
                    "margin": 0,
                    "paddingHorizontal": 20,
                    "paddingVertical": 10,
                  },
                  null,
                  Object {
                    "flex": 1,
                  },
                  null,
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "padding": 20,
                    },
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {},
                      Object {
                        "flex": 5,
                        "flexDirection": "column",
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#005A7F",
                        "fontFamily": "SourceSansPro-Regular",
                        "fontSize": 16,
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                        "lineHeight": 24,
                        "marginBottom": 3,
                        "textAlignVertical": "center",
                        "textTransform": "none",
                      }
                    }
                  >
                    Past Challenge
                  </Text>
                  <View
                    style={
                      Array [
                        Object {
                          "paddingTop": 8,
                        },
                        Object {
                          "flexDirection": "row",
                          "justifyContent": "space-between",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {},
                          Object {
                            "flex": 1,
                            "flexDirection": "column",
                            "justifyContent": "flex-start",
                          },
                        ]
                      }
                    >
                      <Text
                        style={
                          Object {
                            "color": "#B4B6BA",
                            "fontFamily": "SourceSansPro-Regular",
                            "fontSize": 12,
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                            "lineHeight": 16,
                            "textAlignVertical": "center",
                            "textTransform": "none",
                          }
                        }
                      >
                        Days
                      </Text>
                      <Text
                        style={
                          Object {
                            "color": "#505256",
                            "fontFamily": "SourceSansPro-ExtraLight",
                            "fontSize": 24,
                            "fontStyle": "normal",
                            "fontWeight": "300",
                            "lineHeight": 30,
                            "textAlignVertical": "center",
                            "textTransform": "none",
                          }
                        }
                      >
                        -56
                      </Text>
                    </View>
                    <View
                      style={
                        Array [
                          Object {},
                          Object {
                            "flex": 1,
                            "flexDirection": "column",
                            "justifyContent": "flex-start",
                          },
                        ]
                      }
                    >
                      <Text
                        style={
                          Object {
                            "color": "#B4B6BA",
                            "fontFamily": "SourceSansPro-Regular",
                            "fontSize": 12,
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                            "lineHeight": 16,
                            "textAlignVertical": "center",
                            "textTransform": "none",
                          }
                        }
                      >
                        Joined
                      </Text>
                      <Text
                        onPress={[Function]}
                        style={
                          Array [
                            Object {
                              "color": "#505256",
                              "fontFamily": "SourceSansPro-ExtraLight",
                              "fontSize": 24,
                              "fontStyle": "normal",
                              "fontWeight": "300",
                              "lineHeight": 30,
                              "textAlignVertical": "center",
                              "textTransform": "none",
                            },
                            null,
                          ]
                        }
                        testID="joinedCount"
                      >
                        5
                      </Text>
                    </View>
                    <View
                      style={
                        Array [
                          Object {},
                          Object {
                            "flex": 1,
                            "flexDirection": "column",
                            "justifyContent": "flex-start",
                          },
                        ]
                      }
                    >
                      <Text
                        style={
                          Object {
                            "color": "#B4B6BA",
                            "fontFamily": "SourceSansPro-Regular",
                            "fontSize": 12,
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                            "lineHeight": 16,
                            "textAlignVertical": "center",
                            "textTransform": "none",
                          }
                        }
                      >
                        Completed
                      </Text>
                      <Text
                        onPress={[Function]}
                        style={
                          Array [
                            Object {
                              "color": "#505256",
                              "fontFamily": "SourceSansPro-ExtraLight",
                              "fontSize": 24,
                              "fontStyle": "normal",
                              "fontWeight": "300",
                              "lineHeight": 30,
                              "textAlignVertical": "center",
                              "textTransform": "none",
                            },
                            null,
                          ]
                        }
                        testID="completedCount"
                      >
                        3
                      </Text>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {},
                      Object {
                        "alignItems": "flex-end",
                        "flex": 1,
                        "justifyContent": "center",
                      },
                    ]
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`should render empty correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ECEEF2",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    ListEmptyComponent={[Function]}
    ListHeaderComponent={[Function]}
    contentContainerStyle={
      Array [
        undefined,
        Object {
          "backgroundColor": "#ECEEF2",
        },
        Object {},
      ]
    }
    contentInset={
      Object {
        "bottom": 10,
      }
    }
    data={Array []}
    disableVirtualization={false}
    extraData={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={0.2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    refreshing={false}
    renderItem={[Function]}
    scrollEventThrottle={0.0001}
    stickyHeaderIndices={Array []}
    testID="ChallengeFeed"
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
      />
      <View
        style={
          Array [
            Array [
              Object {
                "backgroundColor": "#ffffff",
              },
              Object {
                "backgroundColor": "#ECEEF2",
                "marginTop": 5,
              },
            ],
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../assets/images/challengeTarget.png",
            }
          }
          style={
            Object {
              "flexShrink": 1,
            }
          }
        />
        <Text
          style={
            Object {
              "color": "#007398",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "lineHeight": 24,
              "paddingTop": 10,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Our Challenges
        </Text>
        <Text
          style={
            Object {
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "lineHeight": 24,
              "paddingHorizontal": 80,
              "paddingVertical": 10,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Join each other in a challenge created for your community.
        </Text>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
